--- a/EasyMoney/app/src/main/res/menu/bottom_nav.xml
+++ b/EasyMoney/app/src/main/res/menu/bottom_nav.xml
@@ -1,19 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:title="Home"
-        android:id="@+id/menu_home"
+        android:title="Tracker"
+        android:enabled="true"
+        android:id="@+id/menu_expenseTracker"
         android:icon="@drawable/ic_tracker"
         />
     <item
-        android:title="About"
-        android:id="@+id/menu_about"
-        android:icon="@drawable/ic_baseline_home_24"
+        android:title="Report"
+        android:enabled="true"
+        android:id="@+id/report"
+        android:icon="@drawable/ic_report"
+        />
+    <item
+        android:title="Big Expense"
+        android:enabled="true"
+        android:id="@+id/bigExpense"
+        android:icon="@drawable/ic_bigexpense"
         />
     <item
         android:title="Profile"
+        android:enabled="true"
         android:id="@+id/menu_profile"
-        android:icon="@drawable/ic_baseline_home_24"
+        android:icon="@drawable/ic_profile"
         />
 
 </menu>
