add updated password activity

--- a/EasyMoney/app/src/main/res/layout/activity_expense_tracker.xml
+++ b/EasyMoney/app/src/main/res/layout/activity_expense_tracker.xml
@@ -121,7 +121,7 @@
         style="@style/txtTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="20dp"
         android:text="@string/trackerHeader"
         android:textSize="30sp"
@@ -133,10 +133,10 @@
         android:layout_width="52dp"
         android:layout_height="44dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginEnd="24dp"
         android:backgroundTint="#00FFFFFF"
         app:icon="@drawable/ic_btncalendar"
-        app:iconTint="#676767"
+        app:iconTint="@color/gray2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:iconGravity="top" />
