--- a/EasyMoney/app/src/main/res/layout/activity_add_expense.xml
+++ b/EasyMoney/app/src/main/res/layout/activity_add_expense.xml
@@ -6,27 +6,31 @@
     android:layout_height="match_parent"
     tools:context=".AddExpense">
 
+    <!--back button-->
     <ImageView
         android:id="@+id/btnBack"
-        android:layout_width="89dp"
-        android:layout_height="31dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="32dp"
-        android:contentDescription="@string/btn_add_expense"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        android:contentDescription="@string/description_back"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/btn_backbutton" />
 
+
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/expenseName"
-        android:layout_width="368dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="29dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="24dp"
         android:hint="@string/hint_expense_name"
         android:selectAllOnFocus="true"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txt_addExpense"
+        app:layout_constraintTop_toBottomOf="@+id/category"
         tools:boxCornerRadiusTopEnd="5dp"
         tools:boxCornerRadiusTopStart="5dp">
 
@@ -40,18 +44,19 @@
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/amount"
-        android:layout_width="368dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="25dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="15dp"
         android:layout_marginEnd="24dp"
         android:hint="@string/hint_amount"
         android:inputType="numberDecimal"
         android:selectAllOnFocus="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="182dp"
-        app:layout_constraintTop_toBottomOf="@+id/expenseName">
+        app:layout_constraintTop_toBottomOf="@+id/expenseName"
+        tools:boxCornerRadiusTopEnd="5dp"
+        tools:boxCornerRadiusTopStart="5dp">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/inputAmount"
@@ -67,53 +72,50 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_gravity="start"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="24dp"
         android:background="@drawable/style_btn_blue"
         android:enabled="true"
         android:text="@string/btn_add_expense"
-        app:layout_constraintBottom_toTopOf="@+id/reportTrackerFoot"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/checkbox_recurExp" />
 
     <TextView
         android:id="@+id/txt_addExpense"
-        android:layout_width="154dp"
-        android:layout_height="51dp"
-        android:layout_marginStart="141dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="116dp"
+        style="@style/txtTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="25dp"
         android:text="@string/btn_add_expense"
         android:textSize="22sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.49"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
 
     <CheckBox
         android:id="@+id/checkbox_recurExp"
+        style="@style/txtSub"
         android:layout_width="170dp"
         android:layout_height="55dp"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="12dp"
-        android:layout_marginEnd="213dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="15dp"
         android:text="@string/checkbox_recurring"
         android:textSize="16sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/category" />
+        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/scrollView2"
-        android:layout_width="368dp"
-        android:layout_height="56dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="30dp"
-        android:layout_marginEnd="16dp"
+        style="@style/txtSub"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="24dp"
         android:hint="@string/hint_date_expense"
         android:inputType="textPersonName"
         android:selectAllOnFocus="true"
@@ -131,22 +133,25 @@
     </com.google.android.material.textfield.TextInputLayout>
 
 
+    <!--Footer Buttons -->
 
     <Spinner
         android:id="@+id/category"
-        android:layout_width="375dp"
+        style="@style/txtSub"
+        android:layout_width="0dp"
         android:layout_height="60dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="127dp"
         android:layout_marginEnd="24dp"
         android:background="@android:drawable/btn_dropdown"
         android:entries="@array/categoriesExpense"
         android:prompt="@string/hint_category_expense"
         android:spinnerMode="dialog"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />
-    <!--Footer Buttons -->
+        app:layout_constraintTop_toTopOf="parent" />
+
     <Button
         android:id="@+id/userTrackerFoot"
         android:layout_width="108dp"
