--- a/EasyMoney/app/src/main/res/layout/activity_recurring_bills_calendar.xml
+++ b/EasyMoney/app/src/main/res/layout/activity_recurring_bills_calendar.xml
@@ -7,16 +7,18 @@
     tools:context=".RecurringBillsCalendar">
 
 
-    <ImageView
-        android:id="@+id/btnBack"
+    <Button
+        android:id="@+id/btnBackBills"
         android:layout_width="89dp"
         android:layout_height="31dp"
         android:layout_marginStart="20dp"
         android:layout_marginTop="16dp"
+        android:background="#00FFFFFF"
         android:contentDescription="@string/btn_back"
+        app:icon="@drawable/btn_backbutton"
+        app:iconTint="#676767"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/btn_backbutton" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/txt_recurringBills"
@@ -56,7 +58,7 @@
         android:layout_marginBottom="132dp"
         android:background="@drawable/style_btn_blue"
         android:enabled="true"
-        android:text="@string/btn_add_recurring_bills"
+        android:text="@string/btn_add_expense"
         app:icon="@drawable/ic_iconadd"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
