--- a/EasyMoney/app/src/main/res/layout/activity_register2.xml
+++ b/EasyMoney/app/src/main/res/layout/activity_register2.xml
@@ -7,7 +7,7 @@
     tools:context=".Register2Activity">
 
     <ImageView
-        android:id="@+id/btnBack"
+        android:id="@+id/btnBackBills"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
@@ -27,7 +27,7 @@
         android:layout_marginTop="35dp"
         android:text="@string/txt_register_title"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnBack" />
+        app:layout_constraintTop_toBottomOf="@+id/btnBackBills" />
 
 
     <TextView
