--- a/EasyMoney/app/src/main/res/layout/activity_update_password.xml
+++ b/EasyMoney/app/src/main/res/layout/activity_update_password.xml
@@ -10,7 +10,7 @@
 
     <!--back button-->
     <ImageView
-        android:id="@+id/btnBack"
+        android:id="@+id/btnBackBills"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
@@ -30,7 +30,7 @@
         android:layout_marginTop="36dp"
         android:text="@string/txt_update_password_title"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnBack" />
+        app:layout_constraintTop_toBottomOf="@+id/btnBackBills" />
 
     <!--sub text-->
     <TextView
