--- a/EasyMoney/app/src/main/res/layout/activity_big_expense_setup.xml
+++ b/EasyMoney/app/src/main/res/layout/activity_big_expense_setup.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".BigExpense_setup">
+    tools:context=".BigExpense_setup"
+    android:background="#9E9E9E">
 
     <Spinner
         android:id="@+id/txtCatExpGroup"
@@ -13,14 +14,15 @@
         android:layout_marginStart="2dp"
         android:layout_marginTop="64dp"
         android:layout_marginBottom="420dp"
-        android:entries="@array/group"
-        android:prompt="@string/promt"
+        android:entries="@array/categoriesExpense"
+        android:prompt="@string/bigExHint1"
         android:spinnerMode="dialog"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.452"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtSubTitle" />
+        app:layout_constraintTop_toBottomOf="@+id/txtSubTitle"
+        android:background="@color/white" />
 
     <Spinner
         android:id="@+id/txtPerExpGroup"
@@ -29,12 +31,15 @@
         android:layout_marginStart="2dp"
         android:layout_marginTop="22dp"
         android:layout_marginBottom="356dp"
+        android:entries="@array/expensePeriod"
+        android:prompt="@string/bigExHint2"
         android:spinnerMode="dialog"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.452"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtCatExpGroup" />
+        app:layout_constraintTop_toBottomOf="@+id/txtCatExpGroup"
+        android:background="@color/white" />
 
     <EditText
         android:id="@+id/editTextNumber"
@@ -49,7 +54,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.452"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        android:background="@color/white" />
 
     <EditText
         android:id="@+id/txtTitle"
@@ -89,6 +95,51 @@
         android:text="@string/btnBigEx"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+    <Button
+        android:id="@+id/userTrackerFoot"
+        android:layout_width="108dp"
+        android:layout_height="64dp"
+        android:backgroundTint="#FFFFFF"
+        app:icon="@drawable/ic_userinactive"
+        app:iconGravity="top"
+        app:iconTint="#676767"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/bETrackerFoot" />
+
+    <Button
+        android:id="@+id/bETrackerFoot"
+        android:layout_width="102dp"
+        android:layout_height="64dp"
+        android:backgroundTint="#FFFFFF"
+        app:icon="@drawable/ic_bigexpenseinactive"
+        app:iconGravity="top"
+        app:iconTint="#FFFFFF"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/reportTrackerFoot"
+        tools:iconTint="#676767" />
+
+    <Button
+        android:id="@+id/reportTrackerFoot"
+        android:layout_width="102dp"
+        android:layout_height="64dp"
+        android:backgroundTint="#FFFFFF"
+        android:gravity="center"
+        app:icon="@drawable/ic_reportincactive"
+        app:iconGravity="top"
+        app:iconTint="#676767"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/trackerTrackerFoot" />
+
+    <Button
+        android:id="@+id/trackerTrackerFoot"
+        android:layout_width="102dp"
+        android:layout_height="64dp"
+        android:backgroundTint="#FFFFFF"
+        app:icon="@drawable/ic_trackerinactive"
+        app:iconGravity="top"
+        app:iconTint="#676767"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
