--- a/EasyMoney/app/src/main/res/layout/activity_expense_goal.xml
+++ b/EasyMoney/app/src/main/res/layout/activity_expense_goal.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#9E9E9E"
+    android:background="@color/gray6"
     tools:context=".ExpenseGoal">
 
     <Button
@@ -22,6 +22,7 @@
 
     <TextView
         android:id="@+id/goal1Header"
+        style="@style/txtTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="45dp"
