--- a/EasyMoney/app/src/main/res/layout/activity_add_expense.xml
+++ b/EasyMoney/app/src/main/res/layout/activity_add_expense.xml
@@ -7,7 +7,7 @@
     tools:context=".AddExpense">
 
     <ImageView
-        android:id="@+id/btnBackBills"
+        android:id="@+id/btnBack"
         android:layout_width="89dp"
         android:layout_height="31dp"
         android:layout_marginStart="16dp"
